; ModuleID = '/home/carl/AnghaBench/linux/kernel/irq/extr_chip.c_irq_set_chip_data.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/irq/extr_chip.c_irq_set_chip_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @irq_set_chip_data(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.irq_desc*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.irq_desc* @irq_get_desc_lock(i32 %8, i64* %6, i32 0)
  store %struct.irq_desc* %9, %struct.irq_desc** %7, align 8
  %10 = load %struct.irq_desc*, %struct.irq_desc** %7, align 8
  %11 = icmp ne %struct.irq_desc* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %23

15:                                               ; preds = %2
  %16 = load i8*, i8** %5, align 8
  %17 = load %struct.irq_desc*, %struct.irq_desc** %7, align 8
  %18 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i8* %16, i8** %19, align 8
  %20 = load %struct.irq_desc*, %struct.irq_desc** %7, align 8
  %21 = load i64, i64* %6, align 8
  %22 = call i32 @irq_put_desc_unlock(%struct.irq_desc* %20, i64 %21)
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %15, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local %struct.irq_desc* @irq_get_desc_lock(i32, i64*, i32) #1

declare dso_local i32 @irq_put_desc_unlock(%struct.irq_desc*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
